# cleanup_helper_app

./: .gitignore  README.md  app.py  pyproject.toml
cleanup_helper_app/: app.py  config.py
cleanup_helper_app/assets/: objects.csv
cleanup_helper_app/components/: image_utils.py
cleanup_helper_app/models/: cost_loader.py  detector.py  optimizer.py
cleanup_helper_app/pages/: 1_Upload_Image.py  2_Object_Detection.py  3_Optimization.py  4_Guided_Cleanup.py
cleanup_helper_app/utils/: session_state.py  session_utils.py
components/: image_utils.py
models/: cost_loader.py  detector.py  optimizer.py
tests/: test_cost_loader.py  test_detector.py  test_optimizer.py  test_upload_image.py
